# transformers-extension

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .workflow-patcher.yml  AGENTS.md  README.md  SECURITY.md  build_language_container.sh  buildspec.yml  buildspec_onprem.yml  buildspec_saas.yml  buildspec_without_db.yml  error_code_config.yml  noxconfig.py  noxfile.py  pyproject.toml  setup.py  version.py
.github/: pull_request_template.md
.github/actions/free-diskspace/: action.yml
.github/actions/prepare_poetry_env/: action.yml
.github/actions/run_tests/: action.yml
.github/actions/run_unit_tests/: action.yml
.github/actions/test_pip_install/: action.yml
.github/workflows/: build-and-publish.yml  build.yaml  cd.yml  check-release-tag.yml  check_setup_py.yaml  check_version.yaml  checks.yml  ci.yml  fast-tests.yml  gh-pages.yml  gpu-tests.yml  matrix-all.yml  matrix-exasol.yml  matrix-python.yml  merge-gate.yml  onprem-integration-tests.yml  periodic-validation.yml  pr-merge.yml  release_droid_upload_github_release_assets.yml  report.yml  saas-integration-tests.yml  slow-checks.yml  test_pip_install.yaml  without-db-integration-tests.yml
.serena/: project.yml
doc/: dependencies.md  design.md
doc/changes/: changelog.md  changes 0.9.0.md  changes_0.1.0.md  changes_0.10.0.md  changes_0.10.1.md  changes_0.2.0.md  changes_0.2.1.md  changes_0.3.0.md  changes_0.4.0.md  changes_0.5.0.md  changes_0.6.0.md  changes_0.7.0.md  changes_0.8.0.md  changes_0.9.0.md  changes_0.9.1.md  changes_0.9.2.md  changes_1.0.0.md  changes_1.0.1.md  changes_2.0.0.md  changes_2.1.0.md  changes_2.2.0.dm  changes_2.2.0.md  changes_2.2.1.md  changes_2.3.0.md  changes_3.0.0.md  changes_4.0.0.md  changes_4.0.1.md  unreleased.md
doc/developer_guide/: developer_guide.md
doc/user_guide/: invoke_models.md  manage_models.md  setup.md  user_guide.md
exasol_transformers_extension/: __init__.py  deploy.py  install_default_models.py  upload_model.py
exasol_transformers_extension/deployment/: constants.py  create_script.sql  default_udf_parameters.py  deployment_utils.py  install_scripts_constants.py  language_container.py  language_container_deployer.py  language_container_deployer_cli.py  script_deployment_queries.py  scripts_deployer.py  scripts_deployer_cli.py  te_language_container_deployer.py  utils.py  work_with_spans_constants.py  work_without_spans_constants.py  write_create_script.py
exasol_transformers_extension/resources/templates/: ai_answer_extended_udf.jinja.sql  ai_classify_udf.jinja.sql  ai_complete_extended_udf.jinja.sql  ai_custom_classify_extended_udf.jinja.sql  ai_entailment_extended_udf.jinja.sql  ai_extract_entities_udf.jinja.sql  ai_fill_mask_extended_udf.sql  ai_sentiment_udf.jinja.sql  ai_translate_extended_udf.jinja.sql  delete_model_udf.jinja.sql  filling_mask_udf.jinja.sql  install_default_models_udf.jinja.sql  ls_models_udf.jinja.sql  model_downloader_udf.jinja.sql  model_loader_udf.jinja.sql  named_entity_recognition_udf.jinja.sql  question_answering_udf.jinja.sql  sequence_classification_single_text_udf.jinja.sql  sequence_classification_text_pair_udf.jinja.sql  sequence_classification_udf.jinja.sql  (+4 more)
exasol_transformers_extension/udfs/: bucketfs_operations.py  filling_mask_udf.py  filling_mask_udf_call.py  model_downloader_udf.py  model_downloader_udf_call.py  question_answering_udf.py  question_answering_udf_call.py  sequence_classification_single_text_udf.py  sequence_classification_single_text_udf_call.py  sequence_classification_text_pair_udf.py  sequence_classification_text_pair_udf_call.py  sequence_classification_udf.py  sequence_classification_udf_call.py
exasol_transformers_extension/utils/: bucketfs_model_specification.py  bucketfs_model_uploader.py  bucketfs_operations.py  current_model_specification.py  dataframe_operations.py  device_management.py  huggingface_hub_bucketfs_model_transfer.py  huggingface_hub_bucketfs_model_transfer_sp.py  in_udf_model_downloader.py  load_local_model.py  load_model.py  model_downloader.py  model_factory_protocol.py  model_specification.py  model_specification_string.py  model_utils.py  temporary_directory_factory.py
githooks/: install.sh  pre-commit  pre-push  prohibit_commit_to_main.sh
language_container/exaslct_scripts/: exaslct.sh
main/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
main/.doctrees/: environment.pickle  index.doctree
scripts/: check_release_version.py  start_integration_test_environment.sh
specs/: mission.md
test/: conftest.py
test/fixtures/: bucketfs_fixture.py  database_connection_fixture.py  language_container_fixture.py  model_fixture.py  model_fixture_utils.py  setup_database_fixture.py
test/unit/: test_install_default_models.py  test_install_default_models_cli.py  test_upload_model.py  utils_for_udf_tests.py
test/utils/: bucketfs_file_list.py  db_queries.py  matchers.py  mock_bucketfs_location.py  mock_cast.py  mock_connections.py  parameters.py  postprocessing.py  revert_language_settings.py
tests/: conftest.py  test_transformers_extension.py
tests/deployment/: test_language_container_deployer.py  test_language_container_deployer_cli.py  test_scripts_deployer.py  test_scripts_deployer_cli.py
tests/fixtures/: bucketfs_fixture.py  build_language_container_fixture.py  database_connection_fixture.py  database_connection_fixture_constants.py  language_container_fixture.py  language_container_fixture_constants.py  model_fixture.py  model_fixture_utils.py  script_deployment_fixture.py  setup_database_fixture.py  upload_language_container_fixture.py
tests/integration_tests/: model_downloader_udf_real.py  test_download_pretrained_model.py  test_model_downloader_udf_implementation.py  test_model_downloader_udf_script.py
tests/unit_tests/: utils_for_udf_tests.py
tests/utils/: bucketfs_file_list.py  db_queries.py  matchers.py  mock_bucketfs_location.py  mock_cast.py  mock_connections.py  mounted_bucketfs_connection.py  parameters.py  postprocessing.py  revert_language_settings.py
vagrant/: Vagrantfile
vagrant/provisioning/: install_poetry.sh
(+781 files in other folders)
