[project]
name = "exasol-transformers-extension"
version = "3.0.0"
description = "An Exasol extension for using state-of-the-art pretrained machine learning models via the Hugging Face Transformers API."
authors = [
    { name = "Umit Buyuksahin", email = "umit.buyuksahin@exasol.com" },
    { name = "Torsten Kilias", email = "torsten.kilias@exasol.com" },
]
requires-python = ">=3.10.0,<3.15"
readme = "README.md"
keywords = ["exasol"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "torch>=2.8.0,<3",
    "transformers[torch]>=4.36.2,<5",
    "Jinja2>=3.1.6,<4",
    "importlib-resources>=6.4.0,<7",
    "click>=8.0.4,<9",
    "pyexasol>=0.25.0,<2",
    "exasol-bucketfs>=1.0.0",
    "tenacity>=8.2.2,<9",
    "sacremoses>=0.0.53",
    "bitsandbytes>=0.45.0",
    "exasol-python-extension-common>=0.9.0,<1",
    "numpy<=1.26.4",
    "exasol-toolbox (>=5.1.1,<6.0.0)",
]
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/exasol/transformers-extension"
homepage = "https://github.com/exasol/transformers-extension"

[tool.poetry]
requires-poetry = ">=2.3.0"

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8",
    "exasol-udf-mock-python>=0.3.0",
    "toml>=0.10.2,<0.11",
    "nox>=2023.4.22,<2024",
    "pytest-exasol-slc>=0.3.0",
    "pytest-exasol-extension>=0.2.1,<1",
    "exasol-toolbox>=5.1.1,<6",
    "pandas-stubs>=2.2.0,<3",
    "types-toml>=0.10.0,<0.11",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# python-toolbox config:

# Allows fine-grained control over what is considered for code coverage
[tool.coverage.run]
relative_files = true
source = [
     "exasol_transformers_extension",
]

# defines the minimum required code coverage
[tool.coverage.report]
fail_under = 15

# Controls maximum line length in your project
[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

# Modify the behavior of import sorting
[tool.isort]
profile = "black"
force_grid_wrap = 2

# Define the minimum linting score considered acceptable
[tool.pylint.master]
fail-under = 7.4

# Maximum line length should match what is configured for black.
# Additionally, a maximum module size can be defined here.
[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.mypy]
plugins = [
    "pydantic.mypy",
]

# Configure exceptions for the type checker
[[tool.mypy.overrides]]
module = [
    "test.*",
    "transformers.*",
    "pyexasol.*",
    # __init__ None values vs unit tests
    "exasol_transformers_extension.utils.load_local_model",
    # "PreTrainedModel" has no attribute "save_pretrained"
    "exasol_transformers_extension/utils/huggingface_hub_bucketfs_model_transfer_sp",
    # exa not defined
    "exasol_transformers_extension.udfs.callers.*",
    # list[...] vs list[DataFrame]
    "exasol_transformers_extension.udfs.models.*"
]
ignore_missing_imports = true
ignore_errors = true

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.ruff.lint]
extend-ignore = [
    "E", # Syntax errors
    "F", # Pyflakes rules (excluding F401)
    "UP", # pyupgrade rules
    "D", # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[tool.sonar]
projectKey = "com.exasol:transformers-extension"
host.url = "https://sonarcloud.io"
organization = "exasol"
